--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,7 +1,9 @@
+/*
 * {
     border-color: red;
     border-style: solid;
 }
+*/
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -19,7 +21,7 @@ ul {
 
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: #000;
 }
 
 h2 {
@@ -32,6 +34,13 @@ h2 {
     align-items: center;
     justify-content: space-between;
     padding: 16px;
+    background-color: rgba(255, 228, 196, 0.772);
+    box-shadow: 0px 10px 5px rgba(0,0,0,.06);
+}
+
+.header a:hover {
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 .footer {
@@ -40,6 +49,7 @@ h2 {
     align-items: center;
     justify-content: center;
     padding: 16px;
+    background-color: #000000b6;
 }
 
 .container {
@@ -108,12 +118,15 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 16px;
 }
 
 .photos .gallery-img {
     max-width: 350px;
     min-width: 50px;
+    border: 1px solid #eee;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 25px;
 }
 
 .testimonial-container {
@@ -122,6 +135,7 @@ h2 {
     align-items: flex-start;
     padding: 16px;
     gap: 16px;
+    flex-wrap: wrap;
 }
 
 .testimonial {
@@ -158,7 +172,21 @@ h2 {
 }
 
 .map {
-    padding: 16px;
+    position: relative;
+    overflow: hidden;
+    width: 40%;
+    padding-top: 30%;
+    margin: 16px;
+}
+
+.map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .info {
@@ -170,11 +198,20 @@ h2 {
     min-width: 200px;
 }
 
-.info-img {
-    max-width: 80px;
+.info-img-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 80px;
+    min-height: 80px;
     border: 1px solid #eee;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 25px;
+    background-color: bisque;
+}
+
+.info-img {
+    min-width: 40px;
 }
 
 .footer .links, .footer a {
@@ -185,4 +222,26 @@ h2 {
 .footer .copyright {
     font-size: 12px;
     color: #ddd;
+}
+
+.footer img {
+    max-width: 100%;
+    margin: 0;
+    padding: 16px;
+}
+
+.logo-container {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+}
+
+.logo-container .logo {
+    display: inline;
+}
+
+.logo-img {
+    display: block;
+    width: 10rem;
+    height: auto;
 }
