--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    background: #E5E7EB;
+}
+
 body {
     font-family: Nunito, Arial, Helvetica, sans-serif;
     display: flex;
@@ -10,10 +14,9 @@ body {
 }
 
 .dark-mode {
-    background: black;
-    color: whitesmoke;
+    background: #1F2937;
+    color: #E5E7EB;
 }
-
 /* ********************************************
         Global Navigation Content 
 ******************************************** */
@@ -178,15 +181,27 @@ body {
 
 .testimonials {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 50px;
+}
+
+.testimonials h1 {
+    font-weight: 700;
 }
 
 .testimonials .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-content: space-between;
     align-items: center;
-    margin: 10px;
+    flex-wrap: wrap;
+    width: 70%;
+}
+
+.yelp-review {
+    margin: 10px !important;
 }
 
 /* ********************************************
@@ -216,6 +231,7 @@ body {
 .footer .links a {
     color: #bbb;
     text-decoration: none;
+    font-weight: 100;
 }
 
 .footer .links a:hover {
@@ -235,7 +251,7 @@ body {
 
 .main-footer-content .link-wrapper-lr-10n .links a {
     margin: 10px;
-    font-weight: 700;
+    font-weight: 400;
 }
 
 .main-footer-content .margin-wrapper-tb-10, .main-footer-content .container {
