--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,29 @@ body {
             Products Content 
 ******************************************** */
 
+.products {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+}
+
+.products .container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
+.products .container .card {
+    display: flex;
+    text-align: center;
+    width: 400px;
+    height: 400px;
+    border: 1px solid orange;
+    border-radius: 12px;
+}
+
 /* ********************************************
             Block Content 
 ******************************************** */
