--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,41 @@ body {
     object-fit: cover;
 }
 
+.hero-content {
+    position: absolute;
+    top: 40%;
+    left: 5%;
+    width: 35%;
+    z-index: 1;
+    color: #fff;
+    text-shadow: 2px 2px 6px rgba(51,51,51,.6);
+}
+
+.hero-content h1 {
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.hero-content p {
+    font-size: 64px;
+    font-weight: 900;
+}
+
+.hero-content a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 24px;
+    background-color: rgba(255, 166, 0, 0.85);
+    padding: 20px;
+    width: 300px;
+    border-radius: 50px;
+}
+
+
 /* ********************************************
             Products Content 
 ******************************************** */
