--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin: 50px;
+}
+
+.products h1 {
+    margin-bottom: 40px;
 }
 
 .products .container {
@@ -215,12 +220,40 @@ body {
 
 .products .container .card {
     display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     width: 400px;
     height: 400px;
-    border: 1px solid orange;
+    border: 2px solid orange;
     border-radius: 12px;
+    /* font */
+    color: #fff;
+    font-size: 64px;
+    font-weight: 700;
+    text-shadow: 2px 2px 6px rgba(51,51,51,.6);
 }
+
+.kitchen-card {
+    background: url("/img/unsplash/sidekix-media-oCw5_evbWyI-unsplash.jpg") center no-repeat;
+}
+
+.bath-card {
+    background: url("/img/unsplash/sidekix-media-g51F6-WYzyU-unsplash.jpg") center no-repeat;
+}
+
+.countertops-card {
+    background: url("/img/unsplash/christian-mackie-cc0Gg3BegjE-unsplash.jpg") center no-repeat;
+}
+
+.flooring-card {
+    background: url("/img/unsplash/ralph-darabos-ccydTEH5x7E-unsplash.jpg") center no-repeat;
+}
+
+.kitchen-card, .bath-card, .countertops-card, .flooring-card {
+    background-size: cover;
+}
+
 
 /* ********************************************
             Block Content 
@@ -251,6 +284,7 @@ body {
 
 .testimonials h1 {
     font-weight: 700;
+    margin-bottom: 40px;
 }
 
 .testimonials .container {
