--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
 }
 
 @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
-    .global-nav.stickied {
+    .global-nav {
         -webkit-backdrop-filter: saturate(180%) blur(16px);
         backdrop-filter: saturate(180%) blur(16px);
     }
@@ -211,6 +211,59 @@ body {
     border-radius: 50px;
 }
 
+.scroll {
+    position: absolute;
+    z-index: 10;
+    bottom: 0.2rem;
+    left: 50%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    pointer-events: none;
+    transition: opacity .2s;
+    height: 10vh;
+}
+
+.scroll .mouse {
+    margin-left: 1px;
+    width: 40px;
+    height: 40px;
+}
+
+.scroll .line {
+    overflow: hidden;
+    margin-top: 0.2rem;
+    width: 2px;
+    height: 100%;
+}
+
+.scroll .line::after {
+    content: "";
+    display: block;
+    background: #fff;
+    -webkit-animation: scroll-line-move 2s 0s infinite;
+    animation: scroll-line-move 2s 0s infinite;
+    height: 100%;
+}
+
+@keyframes scroll-line-move {
+    0% {
+        -webkit-transform: translateY(-100%);
+        transform: translateY(-100%);
+    }
+    50% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+    51% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+    100% {
+        -webkit-transform: translateY(105%);
+        transform: translateY(105%);
+    }
+}
 
 /* ********************************************
             Products Content 
@@ -459,4 +512,107 @@ body {
     border-radius: 12px;
     text-align: center;
     color: orange;
+}
+
+/* ********************************************
+            About Content 
+******************************************** */
+
+#section-heros-about {
+    background-color: #000;
+    overflow: hidden;
+    height: 35vh;
+}
+
+#section-heros-about .hero-content {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    width: 35%;
+    z-index: 1;
+    color: #fff;
+    text-shadow: 2px 2px 6px rgba(51,51,51,.6);
+}
+
+#section-heros-about .hero-content h1 {
+    font-size: 70px;
+    font-weight: 900;
+}
+
+/* ********************************************
+            Mission Content 
+******************************************** */
+
+.mission, 
+.about, 
+.specialties {
+    display: flex;
+}
+
+.mission .container, 
+.about .container, 
+.specialties .container {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin: auto;
+}
+
+.mission .container h2,
+.about .container h2,
+.specialties .container h2 {
+    font-size: 52px;
+}
+
+.mission-statement {
+    font-size: 4.1rem;
+    text-shadow: 0px 10px 10px rgba(83,150,212,.23);
+    font-weight: 900;
+    letter-spacing: 0.4em;
+    /*white-space: pre-line;*/
+    margin-bottom: 50px;
+}
+
+@supports ((-webkit-background-clip: text) or (background-clip: text)) and ((-webkit-text-fill-color: transparent) or (text-fill-color: transparent)) {
+    .mission-statement {
+        background: linear-gradient(to top right, #ff9e7b, #ffd07b, #ffe87b, #ffd07b, #ff9e7b, #ffd07b, #ffe87b, #ffd07b, #ff9e7b);
+        /*background: linear-gradient(to top right, #7bb1ff, #a6aaff, #f1b9f3, #9dfdfd, #7bb1ff, #a6aaff, #f1b9f3, #9dfdfd, #7bb1ff);*/
+        background-size: 500% 500%;
+        color: #000;
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: bg-move 50s infinite linear;
+    }
+}
+
+@keyframes bg-move {
+    0% {
+        background-position: 250% -250%;
+    }
+    100% {
+        background-position: -250% 250%;
+    }
+}
+
+/* ********************************************
+            About Us Content 
+******************************************** */
+
+.about {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+/* ********************************************
+            Specialites Content 
+******************************************** */
+
+.specialties {
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+.specialties-statement p b {
+    color: darkorange;
 }
