--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body {
     margin: 0;
 }
 
+hr {
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
 .dark-mode {
     background: #1F2937;
     color: #E5E7EB;
@@ -395,6 +400,59 @@ body {
 /* ********************************************
             CTA & Contact Content 
 ******************************************** */
+
+.contact .container {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    flex-direction: column;
+}
+
+.contact h1 {
+    margin-top: 50px;
+    margin-bottom: 40px;
+}
+
+.contact .content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+}
+
+.map {
+    width: 700px;
+    height: 650px
+}
+
+.map iframe {
+    border: rgba(255, 166, 0, 0.7) solid;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+}
+
+.phone, .mail {
+    margin: 0 auto;
+}
+
+.phone a, .mail a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: rgba(255, 166, 0, 0.7) solid;
+    border-radius: 12px;
+    background: linear-gradient(to top right, #ff9e7b, #ffd07b);
+}
+
+.phone svg, .mail svg {
+    width: 50px;
+    height: 50px;
+    color: #fff;
+    margin: 20px;
+    filter: drop-shadow(2px 2px 6px rgba(51,51,51,.6));
+}
 
 /* ********************************************
             Footer Content 
