--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -5,7 +5,6 @@
     display: none;
 }
 
-
 @media screen and (max-width: 800px) {
     .global-nav .nav-logo {
         position: absolute;
@@ -15,20 +14,29 @@
         height: 34px;
     }
 
-    .expand {
+    #nav-items {
+        border: red solid;
+        display: none;
+        width: 100vw;
+        height: 100vh;
+        margin-top: 70px;
+    }
+    
+    .expand, .collapse {
         position: absolute;
         color: #fff;
         top: 0.6rem;
         right: 0.5rem;
-    }
-
-    .expand {
         width: 40px;
         height: 40px;
     }
 
     .collapse {
         display: none;
+    }
+
+    .active a {
+        border-bottom: orange solid !important;
     }
 
     .hero-content {
