Add lazy loading to images, fix JS background color issue for navMenu, modify css for containers

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -23,6 +23,7 @@
     }
     
     .expand, .collapse {
+        display: block;
         position: absolute;
         color: #fff;
         top: 0.6rem;
