Add links to product cards

--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,10 @@ hr {
     position: relative;
 }
 
+.card {
+    text-decoration: none;
+}
+
 .products .container .card::before {
     /* Additional layer to create the background effect */
     content: "";
